...
    shareResultTitle: string
    shareResultBody: (didWin: boolean) => string
  }
> = {
  movies: {
    title: "Find the title!",
    searchPlaceholder: "Search for a movie title...",
    giveUpConfirmation: "Are you sure you want to give up on this movie?",
    fullDescriptionTitle: "The Full Plot",
    shareResultTitle: "Talkie Trivia 🎬",
    shareResultBody: (didWin) =>
      didWin ? "I guessed today's movie!" : "I couldn't guess today's movie!",
  },
...
